# Modern-Eye-Tracking

./: .gitignore  pyproject.toml  requirements.txt
project/: README.md  eye_detector.py  frame_source.py  init__.py  main.py  settings.py  utils.py
